--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>weather app</title>
   <link rel="stylesheet" href="style.css" />
 
-  <!-- {{! the below link is for when we use font from font-awesome we have to insert
+  <!-- {{! The below link is for when we use font from font-awesome we have to insert
   this cdn links otherwise our font is not working }} -->
   <link
     rel="stylesheet"
@@ -16,6 +16,7 @@
     referrerpolicy="no-referrer"
   />
   <body>
+    <h3> Weather App </h3>
     <div class="main_div">
       <div class="main_content">
         <form class="temp_form">
