--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     referrerpolicy="no-referrer"
   />
   <body>
-    <h3> Weather App </h3>
+    <h2 style="text-align: center">Weather App</h2>
     <div class="main_div">
       <div class="main_content">
         <form class="temp_form">
